@@ -33,20 +33,15 @@ sub install_matrox_hal {
     rm_rf("$tmpdir/$dir_in_tar");
 }
 
-sub pkg_name_for_Driver2 {
-    my ($card) = @_;
-    $card->{Driver2} eq 'fglrx' ? 'ati' :
-    $card->{Driver2} =~ /^nvidia/ ? $card->{Driver2} : '';
-}
-
 sub pkgs_for_Driver2 {
-    my ($card, $do_pkgs) = @_;
+    my ($Driver2, $do_pkgs) = @_;
 
-    my $pkg = pkg_name_for_Driver2($card);
+    my ($pkg, $base_name) = $Driver2 eq 'fglrx' ? ('ati', 'ati') :
+      $Driver2 =~ /^nvidia/ ? ("x11-driver-video-$Driver2", $Driver2) : () or return;
 
-    $pkg && $do_pkgs->is_available($pkg) or log::l("proprietary package $pkg not available"), return;
+    $do_pkgs->is_available($pkg) or log::l("proprietary package $pkg not available"), return;
 
-    my $module_pkgs = $do_pkgs->check_kernel_module_packages($pkg) or
+    my $module_pkgs = $do_pkgs->check_kernel_module_packages($base_name) or
       log::l("$pkg available, but no kernel module package (for installed kernels, and no dkms)"), return;
 
     ($pkg, @$module_pkgs);
@@ -84,7 +79,7 @@ sub may_use_Driver2 {
 
 	log::explanations("Using specific NVIDIA driver and GLX extensions");
 	$card2->{DRI_GLX_SPECIAL} = $libglx_path;
-	$card2->{Options}{IgnoreEDID} = 1 if $card2->{DriverVersion} ne '97xx';
+	$card2->{Options}{IgnoreEDID} = 1 if $card2->{DriverVersion} ne '-current';
 	$card2;
     } elsif ($card2->{Driver} eq 'fglrx') {
 	$check_drv->('fglrx_drv') or return;
