@@ -1,3 +1,6 @@
+- handle nvidia-current instead of nvidia97xx (thanks to Anssi)
+- handle x11-driver-video-$nvidia instead of $nvidia
+
 Version 0.20 - 3 August 2007, by Pascal "Pixel" Rigaux
 
 - fix detection of touchpad on some kernels (#31584)
